# morpho-on-solana

./: morpho-solana-builder-v2.skill
frontend/: QUICK_REFERENCE.md  morpho-ui-artifact.tsx  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/borrow/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: anchor-client.tsx  mock-wallet.tsx  wallet-adapter.tsx
morpho-solana/: Anchor.toml  DEVNET_SIGNATURES.md  FRONTEND_SPEC.md  Surfpool.toml  package.json
morpho-solana/programs/morpho-solana/: Cargo.toml
morpho-solana/programs/morpho-solana/src/: constants.rs  errors.rs  events.rs  lib.rs
morpho-solana/programs/morpho-solana/src/instructions/: admin.rs  borrow.rs  flash_loan.rs  liquidate.rs  market.rs  mod.rs  position.rs  supply.rs  utils.rs
morpho-solana/programs/morpho-solana/src/interfaces/: irm.rs  mod.rs  oracle.rs
morpho-solana/programs/morpho-solana/src/math/: interest.rs  mod.rs  safe_math.rs  shares.rs  wad.rs
morpho-solana/programs/morpho-solana/src/state/: authorization.rs  market.rs  mod.rs  position.rs  protocol.rs
morpho-solana/programs/morpho-solana/tests/: integration_tests.rs  surfpool_devnet_tests.rs
morpho-solana/scripts/: check-protocol.ts
morpho-solana/tests/: morpho-solana.ts
skill-review/: SKILL.md
skill-review/assets/template/: Anchor.toml
skill-review/assets/template/programs/morpho-solana/: Cargo.toml
skill-review/assets/template/programs/morpho-solana/src/: lib.rs
skill-review/references/: accounts.md  errors-events.md  instructions.md  math.md  oracles-irms.md  testing.md
(+20 files in other folders)
