[package]
name = "morpho-solana"
version = "0.1.0"
description = "Morpho Blue lending protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "morpho_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
switchboard-on-demand = { version = "0.11", features = ["anchor"] }
rust_decimal = "1.38"

[dev-dependencies]
proptest = "1.4"
litesvm = "0.6"
spl-token = "7"
spl-associated-token-account = "6"
solana-sdk = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
