[package]
name = "morpho-solana"
version = "0.1.0"
description = "Morpho Blue lending protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "morpho_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token-2022"] }
spl-token-2022 = "3.0"

[dev-dependencies]
litesvm = "0.3"
solana-sdk = "1.18"
proptest = "1.4"
